[package]
name = "tree_hash"
version = "0.6.0"
edition = "2021"
description = "Efficient Merkle-hashing as used in Ethereum consensus"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sigp/tree_hash"
documentation = "https://docs.rs/tree_hash"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
ethereum-types = { version = "0.14.1", default-features = false, features = ["ethbloom", "rlp"] }
ethereum_hashing = "0.6.0"
smallvec = "1.6.1"

[dev-dependencies]
rand = "0.8.5"
tree_hash_derive = { path = "../tree_hash_derive", version = "0.6.0" }
ethereum_ssz = "0.5"
ethereum_ssz_derive = "0.5"

[features]
default = ["std"]
std = ["ethereum-types/std"]
arbitrary = ["ethereum-types/arbitrary"]
